@@ -16,3 +16,12 @@ var empty_field_msg = "Bitte geben Sie einen Wert an für ";
 var illegal_chars_msg = " enthält illegale Zeichen!";
 var warn_delete_msg = "Sie sind dabei, Gegenst\xc3\xa4nde permanent zu l\xc3\xb6schen! Wollen Sie damit fortfahren?";
 var uri_format_msg = "URI formats must contain %{categories}";
+var no_search_string = 'No search string specified';
+var none_found = 'None found';
+var no_more_instances = 'No more instances found';
+var replaced_none = 'Replaced 0 occurrences';
+var found_from = 'Found from character ';
+var found_to = ' to character ';
+var replaced = 'Replaced ';
+var occurrence = ' occurrence';
+var occurrences = ' occurrences';
