@@ -15,3 +15,12 @@ var empty_field_msg = "You must supply a value for ";
 var illegal_chars_msg = " contains illegal characters!";
 var warn_delete_msg = "You are about to permanently delete items! Do you wish to continue?";
 var uri_format_msg = "URI formats must contain %{categories}";
+var no_search_string = 'No search string specified';
+var none_found = 'None found';
+var no_more_instances = 'No more instances found';
+var replaced_none = 'Replaced 0 occurrences';
+var found_from = 'Found from character ';
+var found_to = ' to character ';
+var replaced = 'Replaced ';
+var occurrence = ' occurrence';
+var occurrences = ' occurrences';
