@@ -15,3 +15,12 @@ var empty_field_msg = "你必須給定這個的值 ";
 var illegal_chars_msg = " 內含非法字元！";
 var warn_delete_msg = "這樣會把好些內容都刪除了，您確定要繼續？";
 var uri_format_msg = "URI formats must contain %{categories}";
+var no_search_string = 'No search string specified';
+var none_found = 'None found';
+var no_more_instances = 'No more instances found';
+var replaced_none = 'Replaced 0 occurrences';
+var found_from = 'Found from character ';
+var found_to = ' to character ';
+var replaced = 'Replaced ';
+var occurrence = ' occurrence';
+var occurrences = ' occurrences';
